--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
     <main>
         Contenido
+        <section>
+            seccion 1
+        </section>
+
+        <section>
+            seccion 2
+        </section>
     </main>
 
     <footer>
