--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Contenido
     
         <section>
-            
+            <img src="img/pokemon.gif" alt="Gif" class="imagen">
         </section>
 
         <section>
